<resources>
    <string name="app_name">Alladyn</string>
    <string name="title">Alladyn (2019)</string>
    <string name="release_date">May 8, 2019</string>
    <string name="rent_button">RENT FROM $4.99</string>
    <string name="buy_button">BUY FROM $9.99</string>
    <string name="star">10k+ rating</string>
    <string name="group">Family</string>
    <string name="array">Similiar</string>
    <string name="android">Mobile</string>
    <string name="description">Aladdin is a lovable street urchin who meets Princess Jasmine,
        the beautiful daughter of the sultan of Agrabah. While visiting her exotic palace,
        Aladdin stumbles upon a magic oil lamp that unleashes a powerful, wisecracking,
        larger-than-life genie. As Aladdin and the genie start to become friends,
        they must soon embark on a dangerous mission to stop the evil sorcerer Jafar
        from overthrowing young Jasmine\'s kingdom.</string>
</resources>